2006-10-09  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-debug.c (_dl_debug_initialize): Check r->r_map for 0
	rather than r->r_brk.

2006-10-06  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_table.c (nis_list): If __follow_path fails in the new
	code, make sure the nis_freeresult call doesn't crash and that the
	result is reported correctly.

2006-09-27  Jakub Jelinek  <jakub@redhat.com>

	* nis/nis_table.c (nis_list): Handle FOLLOW_PATH | ALL_RESULTS
	when callback is NULL.

	* nis/Versions (libnss_nisplus): Add
	_nss_nisplus_initgroups_dyn@@GLIBC_PRIVATE.
	* nis/Makefile (libnss_nisplus-routines): Add nisplus-initgroups.
	* nis/nss_nisplus/nisplus-grp.c (tablename_val, tablename_len,
	_nss_create_tablename): Rename to...
	(grp_tablename_val, grp_tablename_len, _nss_grp_create_tablename):
	... these.  No longer static.
	(internal_setgrent): Adjust users.
	(_nss_nisplus_getgrnam_r, _nss_nisplus_getgrgid_r): Likewise.
	Don't use locking around _nss_grp_create_tablename call.
	* nis/nss_nisplus/nisplus-initgroups.c: New file.

2006-10-06  Andreas Jaeger  <aj@suse.de>

	* include/features.h (__GLIBC_MINOR__): It's glibc 2.5 now.

2006-10-06  Ulrich Drepper  <drepper@redhat.com>

	* po/pl.po: Update from translation team.

	* nscd/nscd.c (main): Fix typo in message.
	Patch by Jakub Bogsz <qboosh@pld-linux.org>.

2006-10-02  Jakub Jelinek  <jakub@redhat.com>

	[BZ #3291]
	* sysdeps/unix/sysv/linux/sparc/sparc64/pause.c: Include
	errno.h, signal.h, unistd.h and sysdep-cancel.h.
	(__sigprocmask): Define.

2006-10-02  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (dl_main): Don't use prelinking if LD_DYNAMIC_WEAK is
	used.

2006-10-02  Jakub Jelinek  <jakub@redhat.com>

	* nscd/mem.c (mempool_alloc): Round array size to 16 bytes
	in oldtotal and newtotal calculation.
	* nscd/nscd-client.h (struct mapped_database): Add datasize
	field.
	* nscd/nscd_helper.c (get_mapping): Initialize datasize field.